# Edge-Contraction

./: CMakeLists.txt  command  edge_contraction.py  greedy_joining_spanning_forest.hxx  python-interface.cxx  test.py
matching/include/: greedy_joining_matching.hxx
new_try/include/: greedy_joining_spanning_forest.hxx
